# avail-rust-updated-snippets

./: Cargo.toml  README.md
src/: main.rs
