[workspace]

[package]
name = "avail-rust-updated-sdk-documentation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use avail-rust v0.1.1 from the `avail-rust` repo
avail-rust = { git = "https://github.com/availproject/avail-rust", tag = "v0.1.1" }
# Tokio
tokio = { version = "1.38.0", features = ["full"] }
# dotenvy
dotenvy = "0.15.7"

